# ClassHelper

./: .gitignore  LICENSE  README.md  choose.py  classhelper.py  main.py  pyproject.toml  read.py  requirements.txt  timer.py  tmp.py
.github/workflows/: Build-and-Release.yml  python-app.yml
assets/default_resource/: namelist.txt
resource/: timetable.csv
src/: choose.py  config.py  getResource.py  main.py  timer.py  wallpaperTimetable.py
